--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@josedache/react-portal",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "types": "lib/typings/index.d.ts",
   "main": "lib/index.js",
@@ -9,27 +9,37 @@
     "lib",
     "dist"
   ],
-  "private": "false",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "yarn tsc && webpack",
-    "rollup": "yarn tsc && rollup --config -w",
-    "tsc": "yarn clean && tsc",
+    "rollup": "yarn tsc && rollup --config",
+    "tsc": "yarn clean && yarn link && tsc -w",
     "build": "yarn rollup",
     "clean": "rm -rf lib dist"
   },
   "keywords": [],
-  "author": "",
+  "homepage": "https://github.com/josedache/react-portal",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/josedache/react-portal.git"
+  },
+  "author": {
+    "name": "Edache Joseph",
+    "email": "josedache0@gmail.com",
+    "url": "https://github.com/josedache/react-portal"
+  },
   "license": "ISC",
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com",
+    "access": "public"
+  },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-native": "^0.63.3"
+    "react": "16.x",
+    "react-native": "0.x"
   },
   "devDependencies": {
+    "@types/react": "^16.9.52",
     "rollup": "^2.29.0",
-    "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "typescript": "^4.0.3"
   }
 }
