--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         ], /* Specify library files to be included in the compilation. */
         "allowJs": true, /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
-        "jsx": "preserve", /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+        "jsx": "react", /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
         "declaration": true, /* Generates corresponding '.d.ts' file. */
         // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
         "declarationDir": "./lib/typings",
@@ -55,5 +55,5 @@
         // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     },
-    "exclude": ["node_modules", "*.config.js"]
+    "exclude": ["node_modules", "*.config.js", "ex*/**"]
 }
